Fixed spacing between main and the other two large articles

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,7 +53,6 @@
  #large{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 630px;
   margin: 90px 0px 0px 0px;
 
@@ -116,6 +115,7 @@
  .sidebyside{
    display: flex;
    justify-content: space-between;
+   margin: 0px;
  }
 
  /*Medium Section */
